@@ -9,7 +9,7 @@ Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/partman/partman-partitioning
 Package: partman-partitioning
 XC-Package-Type: udeb
 Architecture: any
-Depends: partman-base (>= 129), e2fsprogs-udeb, ${fs:Depends}, ${misc:Depends}
+Depends: partman-base (>= 129), e2fsprogs-udeb, ${fs:Depends}, ${misc:Depends}, di-utils (>= 1.66)
 Description: Partitioning operations for partman
  This udeb provides partman with editing operations for creation
  of new partitions, deletion of partitions and initialisation of the
